--- a/page2.html
+++ b/page2.html
@@ -23,15 +23,10 @@
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="" class="on">SOONGSIL PLAYGROUND</a>
-                    <a href="">SSU:PECIALIST</a>
-                    <a href="">SSU COLLEGE</a>
-                    <a href="">ABOUT SSU</a>
-                    <div id="nav-icon4">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+                    <a class="on">SOONGSIL PLAYGROUND</a>
+                    <a>SSU:PECIALIST</a>
+                    <a>SSU COLLEGE</a>
+                    <a>ABOUT SSU</a>
                     <div class="sub_menu">
                         <div class="wrap">
                             <ul>
@@ -94,6 +89,13 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </li>
+                <li>
+                    <div id="nav-icon4">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </li>
                 <li>
