--- a/page9.html
+++ b/page9.html
@@ -23,15 +23,10 @@
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="" >SOONGSIL PLAYGROUND</a>
-                    <a href="" class="on">SSU:PECIALIST</a>
-                    <a href="">SSU COLLEGE</a>
-                    <a href="">ABOUT SSU</a>
-                    <div id="nav-icon4">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+                    <a>SOONGSIL PLAYGROUND</a>
+                    <a class="on">SSU:PECIALIST</a>
+                    <a>SSU COLLEGE</a>
+                    <a>ABOUT SSU</a>
                     <div class="sub_menu">
                         <div class="wrap">
                             <ul>
@@ -97,6 +92,13 @@
                     </div>
                 </li>
                 <li>
+                    <div id="nav-icon4">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </li>
+                <li>
                     <img src="./images/logo2_06.png" alt="숭실대 로고" />
                 </li>
             </ul>
@@ -151,7 +153,7 @@
                                 <p class="txt_fff sub_p">미래 신산업과 숭실 특성화학과</p>
                             </div>
 
-                            <div class="page9_div2">
+                            <!-- <div class="page9_div2">
                                 <diV class="bg_div">
                                     <p class="center_p txt_fff">숭실<br>특성화 교육</p>
                                 </diV> 
@@ -170,7 +172,7 @@
                                 <div class="fff_div5">
                                     <p class="center_p orange_p">연구</p>
                                 </div>
-                                <p class="p9_t1 pagep_p">
+                                <p class="p9_t1 pagep_p frist">
                                     <span class="fw_b">다양한 프로그램 지원</span>
                                     해외 연수, 해외박람회, 국내외 경진대회 참가,<br>
                                     자격증 취득과정 등 전폭 지원
@@ -197,7 +199,8 @@
                                     인턴십, 산학협력 프로젝트,<br>
                                     SCI논문 등재 등
                                 </p>
-                            </div>
+                            </div> -->
+
                         </div>
                     </div>
                     
