--- a/page18.html
+++ b/page18.html
@@ -14,95 +14,97 @@
 
     <body>
 
-        <header>
-            <div class="wrap">
-                <ul class="header_menu">
-                    <li>
-                        <a href="index.html">
-                            <img src="./images/logo.png" alt="숭실대 에스스타 로고">
-                        </a>
-                    </li>
-                    <li class="menuLi">
-                        <a href="">SOONGSIL PLAYGROUND</a>
-                        <a href="" class="on">SSU:PECIALIST</a>
-                        <a href="">SSU COLLEGE</a>
-                        <a href="">ABOUT SSU</a>
-                        <div id="nav-icon4">
-                            <span></span>
-                            <span></span>
-                            <span></span>
+    <header>
+        <diV class="wrap">
+            <ul class="header_menu">
+                <li>
+                    <a href="index.html">
+                        <img src="./images/logo.png" alt="숭실대 에스스타 로고">
+                    </a>
+                </li>
+                <li class="menuLi">
+                    <a>SOONGSIL PLAYGROUND</a>
+                    <a class="on">SSU:PECIALIST</a>
+                    <a>SSU COLLEGE</a>
+                    <a>ABOUT SSU</a>
+                    <div class="sub_menu">
+                        <div class="wrap">
+                            <ul>
+                                <li>
+                                    <p>SOONGSIL PLAYGROUND</p>
+                                    <div>
+                                        <a href="page1.html">숭실의 역사</a>
+                                        <a href="page2.html">숭실의 성과</a>
+                                        <a href="page3.html">숭실 6대 핵심역량</a>
+                                        <a href="page4.html">SSU미래인재전형 합격자 인터뷰</a>
+                                        <a href="page5.html">학생부우수자전형 합격자 인터뷰</a>
+                                        <a href="page6.html">고른기회전형 합격자 인터뷰</a>
+                                        <a href="page7.html">논술우수자전형 합격자 인터뷰</a>
+                                        <a href="page8.html">숭실대 SSU-VERSE 이용방법</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>SSU:PECIALIST</p>
+                                    <div>
+                                        <a href="page9.html">숭실대학교 특성화학과</a>
+                                        <a href="page10.html">글로벌통상학과</a>
+                                        <a href="page11.html">화학공학과</a>
+                                        <a href="page12.html">전자정보공학부 전자공학전공</a>
+                                        <a href="page13.html">전자정보공학부 IT융합전공</a>
+                                        <a href="page14.html">AI융합학부</a>
+                                        <a href="page15.html">예술창작학부 문예창작전공</a>
+                                        <a href="page16.html">SW중심대학사업</a>
+                                        <a href="page17.html">혁신공유대학사업 차세대반도체학과</a>
+                                        <a href="page18.html">인공지능반도체 융합전공</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>SSU COLLEGE</p>
+                                    <div>
+                                        <a href="page19.html">인문대학</a>
+                                        <a href="page31.html">자연과학대학</a>
+                                        <a href="page36.html">법과대학</a>
+                                        <a href="page38.html">사회과학대학</a>
+                                        <a href="page45.html">경제통상대학</a>
+                                        <a href="page49.html">경영대학</a>
+                                        <a href="page53.html">공과대학</a>
+                                        <a href="page59.html">IT대학</a>
+                                        <a href="page65.html">융합특성화자유전공학부</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p>ABOUT SSU</p>
+                                    <div>
+                                        <a href="page66.html">장학제도</a>
+                                        <a href="page69.html">창업 프로그램</a>
+                                        <a href="page70.html">취업 프로그램</a>
+                                        <a href="page71.html">사다리 프로그램</a>
+                                        <a href="page72.html">숭실평화통일스쿨</a>
+                                        <a href="page73.html">레지던스홀</a>
+                                        <a href="page74.html">고시반지원</a>
+                                        <a href="page75.html">봉사활동</a>
+                                        <a href="page76.html">동아리 ̇언론4국 ̇독서인재프로그램</a>
+                                        <a href="page77.html">캠퍼스 ̇교통 안내</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="sub_menu">
-                            <div class="wrap">
-                                <ul>
-                                    <li>
-                                        <p>SOONGSIL PLAYGROUND</p>
-                                        <div>
-                                            <a href="page1.html">숭실의 역사</a>
-                                            <a href="page2.html">숭실의 성과</a>
-                                            <a href="page3.html">숭실 6대 핵심역량</a>
-                                            <a href="page4.html">SSU미래인재전형 합격자 인터뷰</a>
-                                            <a href="page5.html">학생부우수자전형 합격자 인터뷰</a>
-                                            <a href="page6.html">고른기회전형 합격자 인터뷰</a>
-                                            <a href="page7.html">논술우수자전형 합격자 인터뷰</a>
-                                            <a href="page8.html">숭실대 SSU-VERSE 이용방법</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <p>SSU:PECIALIST</p>
-                                        <div>
-                                            <a href="page9.html">숭실대학교 특성화학과</a>
-                                            <a href="page10.html">글로벌통상학과</a>
-                                            <a href="page11.html">화학공학과</a>
-                                            <a href="page12.html">전자정보공학부 전자공학전공</a>
-                                            <a href="page13.html">전자정보공학부 IT융합전공</a>
-                                            <a href="page14.html">AI융합학부</a>
-                                            <a href="page15.html">예술창작학부 문예창작전공</a>
-                                            <a href="page16.html">SW중심대학사업</a>
-                                            <a href="page17.html">혁신공유대학사업 차세대반도체학과</a>
-                                            <a href="page18.html">인공지능반도체 융합전공</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <p>SSU COLLEGE</p>
-                                        <div>
-                                            <a href="page19.html">인문대학</a>
-                                            <a href="page31.html">자연과학대학</a>
-                                            <a href="page36.html">법과대학</a>
-                                            <a href="page38.html">사회과학대학</a>
-                                            <a href="page45.html">경제통상대학</a>
-                                            <a href="page49.html">경영대학</a>
-                                            <a href="page53.html">공과대학</a>
-                                            <a href="page59.html">IT대학</a>
-                                            <a href="page65.html">융합특성화자유전공학부</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <p>ABOUT SSU</p>
-                                        <div>
-                                            <a href="page66.html">장학제도</a>
-                                            <a href="page69.html">창업 프로그램</a>
-                                            <a href="page70.html">취업 프로그램</a>
-                                            <a href="page71.html">사다리 프로그램</a>
-                                            <a href="page72.html">숭실평화통일스쿨</a>
-                                            <a href="page73.html">레지던스홀</a>
-                                            <a href="page74.html">고시반지원</a>
-                                            <a href="page75.html">봉사활동</a>
-                                            <a href="page76.html">동아리 ̇언론4국 ̇독서인재프로그램</a>
-                                            <a href="page77.html">캠퍼스 ̇교통 안내</a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="./images/logo2_06.png" alt="숭실대 로고"/>
-                    </li>
-                </ul>
-            </div>
-
-        </header>
+                    </div>
+                </li>
+                <li>
+                    <div id="nav-icon4">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </li>
+                <li>
+                    <img src="./images/logo2_06.png" alt="숭실대 로고" />
+                </li>
+            </ul>
+        </diV>
+    
+    </header>
 
         <div class="wrpper">
             <div class="wrap">
