--- a/page26.html
+++ b/page26.html
@@ -24,15 +24,10 @@
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="">SOONGSIL PLAYGROUND</a>
-                    <a href="">SSU:PECIALIST</a>
-                    <a href="" class="on">SSU COLLEGE</a>
-                    <a href="">ABOUT SSU</a>
-                    <div id="nav-icon4">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+                    <a href="page1.html">SOONGSIL PLAYGROUND</a>
+                    <a href="page9.html">SSU:PECIALIST</a>
+                    <a href="page19.html" class="on">SSU COLLEGE</a>
+                    <a href="page66.html">ABOUT SSU</a>
                     <div class="sub_menu">
                         <div class="wrap">
                             <ul>
@@ -95,6 +90,13 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </li>
+                <li>
+                    <div id="nav-icon4">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </li>
                 <li>
