--- a/page7.html
+++ b/page7.html
@@ -23,15 +23,10 @@
                 </a>
             </li>
             <li class="menuLi">
-                <a href="" class="on">SOONGSIL PLAYGROUND</a>
-                <a href="">SSU:PECIALIST</a>
-                <a href="">SSU COLLEGE</a>
-                <a href="">ABOUT SSU</a>
-                <div id="nav-icon4">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+            <a> class="on"SOONGSIL PLAYGROUND</a>
+            <a>SSU:PECIALIST</a>
+            <a>SSU COLLEGE</a>
+            <a>ABOUT SSU</a>
                 <div class="sub_menu">
                     <div class="wrap">
                         <ul>
@@ -51,16 +46,16 @@
                             <li>
                                 <p>SSU:PECIALIST</p>
                                 <div>
-                                <a href="page9.html">숭실대학교 특성화학과</a>
-                                <a href="page10.html">글로벌통상학과</a>
-                                <a href="page11.html">화학공학과</a>
-                                <a href="page12.html">전자정보공학부 전자공학전공</a>
-                                <a href="page13.html">전자정보공학부 IT융합전공</a>
-                                <a href="page14.html">AI융합학부</a>
-                                <a href="page15.html">예술창작학부 문예창작전공</a>
-                                <a href="page16.html">SW중심대학사업</a>
-                                <a href="page17.html">혁신공유대학사업 차세대반도체학과</a>
-                                <a href="page18.html">인공지능반도체 융합전공</a>
+                                    <a href="page9.html">숭실대학교 특성화학과</a>
+                                    <a href="page10.html">글로벌통상학과</a>
+                                    <a href="page11.html">화학공학과</a>
+                                    <a href="page12.html">전자정보공학부 전자공학전공</a>
+                                    <a href="page13.html">전자정보공학부 IT융합전공</a>
+                                    <a href="page14.html">AI융합학부</a>
+                                    <a href="page15.html">예술창작학부 문예창작전공</a>
+                                    <a href="page16.html">SW중심대학사업</a>
+                                    <a href="page17.html">혁신공유대학사업 차세대반도체학과</a>
+                                    <a href="page18.html">인공지능반도체 융합전공</a>
                                 </div>
                             </li>
                             <li>
@@ -94,6 +89,13 @@
                             </li>
                         </ul>
                     </div>
+                </div>
+            </li>
+            <li>
+                <div id="nav-icon4">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </li>
             <li>
